Addition to fix overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1168,6 +1168,7 @@ a.accordion-toggle {
   padding-top: 30px;
   padding-bottom: 150px;
   background-color: $brand-accent-lighter;
+  margin: 0 -10px 0 -10px;
 }
 
 .iow-panel {
